--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query": "^5.59.15",
     "@tanstack/react-query-devtools": "^5.59.15",
     "next": "14.2.15",
+    "next-pwa": "^5.6.0",
     "react": "^18",
     "react-dom": "^18",
     "zustand": "^5.0.0"
