--- a/package.json
+++ b/package.json
@@ -13,15 +13,18 @@
     "@supabase/supabase-js": "^2.45.6",
     "@tanstack/react-query": "^5.59.15",
     "@tanstack/react-query-devtools": "^5.59.15",
+    "date-fns": "^4.1.0",
     "next": "14.2.15",
     "next-pwa": "^5.6.0",
     "react": "^18",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18",
     "zustand": "^5.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-datepicker": "^7.0.0",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
