--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "14.2.15",
     "next-pwa": "^5.6.0",
     "react": "^18",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18",
     "zustand": "^5.0.0"
   },
