--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18",
+    "supabase": "^1.207.9",
     "zustand": "^5.0.0"
   },
   "devDependencies": {
