feat: 일회성모임 생성폼 인원제한 기능 구현 성공 fix: 부분 수정

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,9 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      // 슈퍼베이스 타입 절대경로로 지정
+      "@/database.types": ["./database.types.ts"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
