--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@supabase/supabase-js": "^2.45.6",
     "@tanstack/react-query": "^5.59.15",
     "@tanstack/react-query-devtools": "^5.59.15",
+    "@types/react-slick": "^0.23.13",
     "date-fns": "^4.1.0",
     "next": "14.2.15",
     "next-pwa": "^5.6.0",
     "react": "^18",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "supabase": "^1.207.9",
     "zustand": "^5.0.0"
   },
