--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@supabase/supabase-js": "^2.45.6",
     "@tanstack/react-query": "^5.59.15",
     "@tanstack/react-query-devtools": "^5.59.15",
+    "lucide-react": "^0.453.0",
     "next": "14.2.15",
     "next-pwa": "^5.6.0",
     "react": "^18",
