--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
     "supabase": "^1.207.9",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "zustand": "^5.0.0"
   },
   "devDependencies": {
