--- a/.gitignore
+++ b/.gitignore
@@ -37,7 +37,7 @@ next-env.d.ts
 
 certificates
 
-public/icon*
-public/manifest*
-public/sw*
-public/workbox*
+# public/icon*
+# public/manifest*
+# public/sw*
+# public/workbox*
