--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@tanstack/react-query": "^5.59.15",
     "@tanstack/react-query-devtools": "^5.59.15",
     "@types/react-slick": "^0.23.13",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.453.0",
     "next": "14.2.15",
@@ -24,6 +26,7 @@
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
     "supabase": "^1.207.9",
+    "tailwind-merge": "^2.5.4",
     "tailwind-scrollbar-hide": "^1.1.7",
     "zustand": "^5.0.0"
   },
