--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
     "supabase": "^1.207.9",
