--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@tanstack/react-query": "^5.59.15",
     "@tanstack/react-query-devtools": "^5.59.15",
     "@types/react-slick": "^0.23.13",
+    "add": "^2.0.6",
+    "calendar": "^0.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -25,6 +27,7 @@
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-slick": "^0.30.2",
+    "shadcn-ui": "^0.9.3",
     "slick-carousel": "^1.8.1",
     "supabase": "^1.207.9",
     "tailwind-merge": "^2.5.4",
