--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,5 +32,5 @@
     ".next/types/**/*.ts",
     "src/hooks/useClubWishlist.ts"
   ],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", ".next"]
 }
