--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.453.0",
     "next": "14.2.15",
-    "next-pwa": "^5.6.0",
+    "@ducanh2912/next-pwa": "^10.2.9",
     "react": "^18",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18",
@@ -33,7 +33,10 @@
     "supabase": "^1.207.9",
     "tailwind-merge": "^2.5.4",
     "tailwind-scrollbar-hide": "^1.1.7",
-    "zustand": "^5.0.0"
+    "zustand": "^5.0.0",
+    "sharp": "^0.33.5",
+    "postcss": "^8",
+    "webpack": "^5.96.1"
   },
   "devDependencies": {
     "@types/node": "^20",
