--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,7 +30,8 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "src/hooks/useClubWishlist.ts"
+    "src/hooks/useClubWishlist.ts",
+    "src/utils/throttle"
   ],
   "exclude": ["node_modules", ".next"]
 }
