chore: Yarn Berry 설정 추가 및 의존성 업데이트, 클럽 리스트 컴포넌트 리팩토링

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,5 +33,5 @@
     "src/hooks/useClubWishlist.ts",
     "src/utils/throttle"
   ],
-  "exclude": ["node_modules", ".next"]
+  "exclude": [".next"]
 }
