--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@sentry/nextjs": "^8",
+    "@ducanh2912/next-pwa": "^10.2.9",
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/core": "^1.29.0",
+    "@opentelemetry/instrumentation": "^0.56.0",
+    "@opentelemetry/sdk-trace-base": "^1.29.0",
+    "@sentry/core": "^8.42.0",
+    "@sentry/nextjs": "^8.42.0",
     "@supabase/ssr": "^0.5.1",
     "@supabase/supabase-js": "^2.45.6",
     "@tanstack/react-query": "^5.59.15",
@@ -22,21 +28,21 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.453.0",
     "next": "14.2.15",
-    "@ducanh2912/next-pwa": "^10.2.9",
+    "postcss": "^8",
     "react": "^18",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-slick": "^0.30.2",
     "shadcn-ui": "^0.9.3",
+    "sharp": "^0.33.5",
     "slick-carousel": "^1.8.1",
+    "styled-jsx": "^5.1.6",
     "supabase": "^1.207.9",
     "tailwind-merge": "^2.5.4",
     "tailwind-scrollbar-hide": "^1.1.7",
-    "zustand": "^5.0.0",
-    "sharp": "^0.33.5",
-    "postcss": "^8",
-    "webpack": "^5.96.1"
+    "webpack": "^5.96.1",
+    "zustand": "^5.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -48,5 +54,11 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "packageManager": "yarn@4.5.3",
+  "dependenciesMeta": {
+    "eslint@8.57.1": {
+      "unplugged": true
+    }
   }
 }
