--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
   },
   "dependencies": {
     "@ducanh2912/next-pwa": "^10.2.9",
-    "@sentry/nextjs": "^8",
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/core": "^1.29.0",
+    "@opentelemetry/instrumentation": "^0.56.0",
+    "@opentelemetry/sdk-trace-base": "^1.29.0",
+    "@sentry/core": "^8.42.0",
+    "@sentry/nextjs": "^8.42.0",
     "@supabase/ssr": "^0.5.1",
     "@supabase/supabase-js": "^2.45.6",
     "@tanstack/react-query": "^5.59.15",
@@ -21,17 +26,19 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "jquery": "^3.7.1",
     "lucide-react": "^0.453.0",
     "next": "14.2.15",
     "postcss": "^8",
-    "react": "^18",
+    "react": "^19.0.0",
     "react-datepicker": "^7.5.0",
-    "react-dom": "^18",
+    "react-dom": "^19.0.0",
     "react-icons": "^5.3.0",
     "react-slick": "^0.30.2",
     "shadcn-ui": "^0.9.3",
     "sharp": "^0.33.5",
     "slick-carousel": "^1.8.1",
+    "styled-jsx": "^5.1.6",
     "supabase": "^1.207.9",
     "sweetalert2": "^11.14.5",
     "tailwind-merge": "^2.5.4",
@@ -40,14 +47,21 @@
     "zustand": "^5.0.0"
   },
   "devDependencies": {
+    "@types/jquery": "^3",
     "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/react": "^19.0.1",
     "@types/react-datepicker": "^7.0.0",
-    "@types/react-dom": "^18",
+    "@types/react-dom": "^19.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "packageManager": "yarn@4.5.3",
+  "dependenciesMeta": {
+    "eslint@8.57.1": {
+      "unplugged": true
+    }
   }
 }
