--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
-    "moduleResolution": "bundler",
+    "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
@@ -33,5 +33,5 @@
     "src/hooks/useClubWishlist.ts",
     "src/utils/throttle"
   ],
-  "exclude": ["node_modules", ".next"]
+  "exclude": [".next"]
 }
