--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,11 +8,12 @@
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
-    "moduleResolution": "bundler",
+    "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "forceConsistentCasingInFileNames": true,
     "plugins": [
       {
         "name": "next"
@@ -32,5 +33,5 @@
     ".next/types/**/*.ts",
     "src/hooks/useClubWishlist.ts"
   ],
-  "exclude": ["node_modules", ".next"]
+  "exclude": [".next"]
 }
