--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.453.0",
     "next": "14.2.15",
+    "plaiceholder": "^3.0.0",
     "postcss": "^8",
     "react": "^18",
     "react-datepicker": "^7.5.0",
