--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
       }
     ],
     "paths": {
+      "@/public/*": ["./public/*"],
       "@/*": ["./src/*"],
       // 슈퍼베이스 타입 절대경로로 지정
       "@/database.types": ["./database.types.ts"]
