--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "zustand": "^5.0.0"
   },
   "devDependencies": {
+    "@types/eslint-plugin-jsx-a11y": "^6",
     "@types/jquery": "^3",
     "@types/node": "^20",
     "@types/react": "^18",
@@ -56,6 +57,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
