--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,1 @@
-{
-  "extends": ["next/core-web-vitals", "next/typescript", "plugin:jsx-a11y/recommended"],
-  "plugins": ["jsx-a11y"],
-  "rules": {
-    "jsx-a11y/alt-text": "warn",
-    "jsx-a11y/anchor-is-valid": "warn"
-  }
-}
+{ "extends": ["next/core-web-vitals", "next/typescript"] }
